# iPCSX2

./: .gitignore  job-logs.txt
.github/workflows/: build-ios.yml
cmake/: BuildParameters.cmake  Pcsx2Utils.cmake  SearchForStuff.cmake
src/assets/Assets.xcassets/AppIcon.appiconset/: Contents.json
src/assets/Assets.xcassets/SplashImage.imageset/: Contents.json
src/assets/resources/: GameIndex.yaml
src/assets/resources/shaders/opengl/: tfx_fs.glsl  tfx_vgs.glsl
src/cpp/: CMakeLists.txt  Entitlements.plist  Info.plist.in  iPSX2-Bridging-Header.h  iPSX2Bridge.h  iPSX2Bridge.mm  ios_main.mm
src/cpp/common/: Assertions.cpp  CMakeLists.txt  Console.cpp  Console.h  FileSystem.cpp  FileSystem.h  HTTPDownloaderCurl.cpp  HostSys.cpp  HostSys.h  Image.cpp  Pcsx2Defs.h  Semaphore.cpp  TextureDecompress.cpp  WindowInfo.h
src/cpp/common/Android/: Adapter.h  JNI.cpp
src/cpp/common/Darwin/: DarwinMisc.cpp  DarwinMisc.h
src/cpp/common/Linux/: LnxHostSys.cpp  LnxMisc.cpp
src/cpp/common/emitter/: internal.h  x86emitter.cpp  x86emitter.h  x86types.h
src/cpp/pcsx2/: Achievements.cpp  Achievements.h  CMakeLists.txt  COP0.cpp  Common.h  Config.h  Counters.cpp  Dmac.cpp  Elfheader.cpp  FiFo.cpp  GS.cpp  Gif.cpp  Gif_Unit.h  Host.cpp  Host.h  Hotkeys.cpp  Hw.cpp  Hw.h  HwRead.cpp  HwWrite.cpp  Interpreter.cpp  IopBios.cpp  IopDma.cpp  IopIrq.cpp  IopMem.cpp  MMI.cpp  MTGS.cpp  MTGS.h  MTVU.cpp  MTVU.h  Memory.cpp  Memory.h  Pcsx2Config.cpp  PerformanceMetrics.cpp  PerformanceMetrics.h  R3000A.cpp  R3000A.h  R3000AInterpreter.cpp  R3000AOpcodeTables.cpp  R5900.cpp  (+22 more)
src/cpp/pcsx2/CDVD/: CDVD.cpp  ChdFileReader.cpp  FlatFileReader.cpp  Ps1CD.cpp
src/cpp/pcsx2/CDVD/Darwin/: IOCtlSrc.cpp
src/cpp/pcsx2/CDVD/Linux/: DriveUtility.cpp
src/cpp/pcsx2/DEV9/: AdapterUtils.cpp  DEV9.cpp  pcap_io.cpp  pcap_io.h
src/cpp/pcsx2/DEV9/InternalServers/: DHCP_Server.cpp
src/cpp/pcsx2/DebugTools/: DisR5900asm.cpp
src/cpp/pcsx2/GS/: GS.cpp  GSCapture.cpp  GSPng.cpp  GSState.cpp  GSState.h  GSUtil.cpp  GSUtil.h  GSVector4i_arm64.h
src/cpp/pcsx2/GS/Renderers/Common/: GSDevice.cpp  GSDevice.h  GSRenderer.cpp
src/cpp/pcsx2/GS/Renderers/HW/: GSRendererHW.cpp  GSRendererHW.h  GSTextureReplacementLoaders.cpp
src/cpp/pcsx2/GS/Renderers/Metal/: GSDeviceMTL.h  GSDeviceMTL.mm  GSMTLDeviceInfo.mm
src/cpp/pcsx2/GS/Renderers/Null/: GSRendererNull.cpp
src/cpp/pcsx2/GS/Renderers/OpenGL/: GLContext.cpp  GLContext.h  GLContextEGL.cpp  GLContextEGL.h  GLContextEGLAndroid.cpp  GLContextEGLAndroid.h  GLProgram.h  GLShaderCache.cpp  GLShaderCache.h  GLState.h  GLStreamBuffer.h  GSDeviceOGL.cpp  GSDeviceOGL.h  GSTextureOGL.h
src/cpp/pcsx2/GS/Renderers/SW/: GSRendererSW.cpp
src/cpp/pcsx2/GS/Renderers/Vulkan/: GSDeviceVK.cpp  GSTextureVK.cpp  VKEntryPoints.inl  VKLoader.cpp  VKLoader.h  VKShaderCache.cpp  VKStreamBuffer.cpp  VKStreamBuffer.h  VKSwapChain.cpp
src/cpp/pcsx2/Host/: AudioStream.cpp  AudioStream.h  AudioStreamTypes.h
src/cpp/pcsx2/IPU/: IPU.cpp  IPU_Fifo.cpp
src/cpp/pcsx2/ImGui/: FullscreenUI.cpp  ImGuiManager.cpp  ImGuiOverlays.cpp
src/cpp/pcsx2/Input/: InputManager.cpp
src/cpp/pcsx2/SIO/Pad/: PadDualshock2.cpp
src/cpp/pcsx2/arm64/: AsmHelpers.cpp  RecStubs.cpp  VixlHelpers.cpp  VixlHelpers.h
src/cpp/pcsx2/ps2/: BiosTools.cpp  BiosTools.h  pgif.cpp
src/cpp/pcsx2/ps2/Iop/: IopHwRead.cpp  IopHwWrite.cpp  PsxBios.cpp
src/cpp/pcsx2/x86/: BaseblockEx.h  iCOP0.cpp  iCore.cpp  iCore.h  iFPU.cpp  iMMI.cpp  iR3000A.cpp  iR3000A.h  iR3000Atables.cpp  iR5900.h  iR5900Analysis.cpp  iR5900Misc.cpp  microVU.cpp  microVU.h  microVU_Clamp.inl  microVU_Compile.inl  microVU_Execute.inl  microVU_IR.h  microVU_Lower.inl  microVU_Macro.inl  microVU_Misc.inl  microVU_impl.cpp
src/cpp/pcsx2/x86/ix86-32/: iCore.cpp  iR5900.cpp  iR5900Arit.cpp  iR5900AritImm.cpp  iR5900Branch.cpp  iR5900Jump.cpp  iR5900LoadStore.cpp  iR5900Move.cpp  iR5900MultDiv.cpp  iR5900Shift.cpp  recVTLB.cpp
src/swift/Models/: AppState.swift  EmulatorBridge.swift  FileImportHandler.swift  PadLayoutStore.swift  SettingsStore.swift  SwiftUIHost.swift
src/swift/Views/: BIOSListView.swift  GameListView.swift  GameScreenView.swift  HelpView.swift  MetalGameView.swift  RootView.swift  VirtualControllerView.swift
src/swift/Views/Settings/: EmulatorSettingsView.swift  GamepadSettingsView.swift  GraphicsSettingsView.swift  OverlaySettingsView.swift  PadLayoutEditView.swift  SettingsRootView.swift  VirtualPadSettingsView.swift
